--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ google-api-python-client>=2.100.0
 google-auth-httplib2>=0.1.1
 google-auth-oauthlib>=1.1.0
 qrcode[pil]>=7.4.2
-opencv-python>=4.8.0
-asyncio>=3.4.3
-pySerial>=3.5
+pyserial>=3.5
+opencv-python-headless>=4.8.0  # For image processing
+numpy>=1.24.0  # For array operations
